# SFrame

./: .env.example  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml  package.json
apps/api/: .dockerignore  Dockerfile.cpu  Dockerfile.gpu  package.json  pyproject.toml
apps/api/app/: config.py  db.py  main.py  schemas.py  worker.py
apps/api/app/routers/: assets.py  history.py  jobs.py
apps/api/app/services/: color_adjust.py  crop.py  history.py  image_io.py  preview_live.py  raw_develop.py  storage.py  upscale_local.py  upscale_ultrasharp.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/api/v1/[[...path]]/: route.ts
apps/web/src/components/: BeforeAfterSlider.tsx  ColorAdjustPanel.tsx  CropWorkspace.tsx  HistoryPanel.tsx  ImageUploader.tsx  JobProgress.tsx  SuperResolutionPanel.tsx
apps/web/src/components/ui/: button.tsx  tabs.tsx
apps/web/src/hooks/: useLivePreview.ts
apps/web/src/lib/: api.ts  color-adjust.ts
docs/medium-article/: ARTICLE.md
scripts/: capture-article-screenshots.mjs  dev.sh  docker-up-gpu.sh  docker-up.sh  install-gpu-torch.sh  setup-nvidia-docker.sh
