[project]
name = "sframe-api"
version = "0.1.0"
description = "SFrame image crop and super-resolution API"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.18",
    "pillow>=11.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "exifread>=3.0.0",
    "rawpy>=0.19.0",
    "numpy>=1.21.0",
    "aura-sr>=0.0.4",
    "spandrel>=0.4.2",
    "huggingface-hub>=0.26.0",
    "torch>=2.0.0",
]

[project.scripts]
sframe-api = "app.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
